[project]
name = "chesnokuz"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.1",
    "argon2-cffi>=25.1.0",
    "fastapi[standard]>=0.128.0",
    "passlib[argon2]",
    "psycopg2-binary",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
]
